--- a/project/docker/index.html
+++ b/project/docker/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Добро пожаловать!</title>
+    <title>Hello All</title>
 </head>
 <body>
-    <h1>Привет, мир! Это моя самописная стартовая страница!</h1>
+    <h1>My web site</h1>
 </body>
 </html>
